<resources>
    <string name="brave_about_fork">Due to restrictive project policy, the NewPipeTeam refuses to add platforms that they find offensive. This fork (BravePipe) will not be as restrictive. As long as the platforms work in the spirit of free speech, they could be integrated. Nevertheless, platforms that promote pornography or other degrading things will <b>NOT</b> be included here. This fork will focus only on integrating other platforms. Unrelated patches will be rejected for now. Feel free to suggest which alternative platforms should be included. Any contribution (development/testing/bug report) is greatly appreciated. Currently additional platforms compared to NewPipe:</string>
    <string name="brave_about_title">About this fork</string>
    <string name="brave_github_url" translatable="false">https://github.com/bravepipeproject</string>
    <string name="brave_supported_platforms" translatable="false">\n\u2022 BitChute\n\u2022 Rumble</string>
    <string name="search_filters_short">Short</string>
    <string name="search_filters_long">Long</string>
    <string name="search_filters_rumbles">Rumbles</string>
    <string name="search_filters_most_recent">Most recent</string>
    <string name="search_filters_short_0_5_min">Short (0-5m)</string>
    <string name="search_filters_medium_5_20_min">Medium (5-20m)</string>
    <string name="search_filters_long_20_min_plus"> Long (20m+)</string>
    <string name="search_filters_feature_45_min_plus">Feature (45m+)</string>
    <string name="search_filters_newest_first">Newest First</string>
    <string name="search_filters_oldest_first">Oldest First</string>
    <string name="search_filters_sensitivity_safe">Safe</string>
    <string name="search_filters_sensitivity_normal">Normal</string>
    <string name="search_filters_sensitivity_nsfw">Nsfw</string>
    <string name="search_filters_sensitivity_nsfl">Nsfl</string>
    <string name="search_filters_sensitivity">Sensitivity</string>
    <string name="search_filters_10_30_min">10–30 min</string>
    <string name="search_filters_2_10_min">2–10 min</string>
    <string name="search_filters_360">360°</string>
    <string name="search_filters_3d">3D</string>
    <string name="search_filters_4_20_min">4–20 min</string>
    <string name="search_filters_4k">4K</string>
    <string name="search_filters_added">Added</string>
    <string name="search_filters_artists_and_labels">artists &amp; labels</string>
    <string name="search_filters_any_time">Any time</string>
    <string name="search_filters_ascending">Ascending</string>
    <string name="search_filters_ccommons">Creative Commons</string>
    <string name="search_filters_creation_date">Creation date</string>
    <string name="search_filters_date">Date</string>
    <string name="search_filters_duration">Duration</string>
    <string name="search_filters_features">Features</string>
    <string name="search_filters_greater_30_min">&gt; 30 min</string>
    <string name="search_filters_hd">HD</string>
    <string name="search_filters_hdr">HDR</string>
    <string name="search_filters_kind">Kind</string>
    <string name="search_filters_last_30_days">Last 30 days</string>
    <string name="search_filters_last_7_days">Last 7 days</string>
    <string name="search_filters_last_hour">Last hour</string>
    <string name="search_filters_last_year">last year</string>
    <string name="search_filters_length">Length</string>
    <string name="search_filters_less_2_min">&lt; 2 min</string>
    <string name="search_filters_license">License</string>
    <string name="search_filters_location">Location</string>
    <string name="search_filters_long_greater_10_min">Long (&gt; 10 min)</string>
    <string name="search_filters_medium_4_10_min">Medium (4–10 min)</string>
    <string name="search_filters_no">No</string>
    <string name="search_filters_over_20_min">Over 20 min</string>
    <string name="search_filters_past_day">Past day</string>
    <string name="search_filters_past_hour">Past hour</string>
    <string name="search_filters_past_month">Past month</string>
    <string name="search_filters_past_week">Past week</string>
    <string name="search_filters_past_year">Past year</string>
    <string name="search_filters_publish_date">Publish date</string>
    <string name="search_filters_published">Published</string>
    <string name="search_filters_purchased">Purchased</string>
    <string name="search_filters_rating">Rating</string>
    <string name="search_filters_relevance">Relevance</string>
    <string name="search_filters_sensitive">Sensitive</string>
    <string name="search_filters_sepiasearch">SepiaSearch</string>
    <string name="search_filters_short_less_4_min">Short (&lt; 4 min)</string>
    <string name="search_filters_sort_by">Sort by</string>
    <string name="search_filters_sort_order">Sort order</string>
    <string name="search_filters_subtitles">Subtitles</string>
    <string name="search_filters_to_modify_commercially">To modify commercially</string>
    <string name="search_filters_today">Today</string>
    <string name="search_filters_under_4_min">Under 4 min</string>
    <string name="search_filters_upload_date">Upload Date</string>
    <string name="search_filters_views">Views</string>
    <string name="search_filters_vod_videos">VOD videos</string>
    <string name="search_filters_vr180">VR180</string>
    <string name="search_filters_this_month">This month</string>
    <string name="search_filters_this_week">This week</string>
    <string name="search_filters_this_year">This year</string>
    <string name="search_filters_yes">Yes</string>
    <string name="search_filters_youtube_music">YouTube Music</string>
    <string name="filter">Filter</string>
    <string name="filter_search_sort_filters">Sort filters</string>
    <string name="filter_search_content_filters">Content filters</string>
    <string name="search_filter_ui">Select Search Filter UI</string>
    <string name="search_filter_ui_dialog">Simple Dialog (default)</string>
    <string name="search_filter_ui_style">Action Menu styled Dialog</string>
    <string name="search_filter_ui_legacy">Action Menu (legacy)</string>
    <string name="search_filter_ui_chip_dialog">Chip Dialog</string>
    <string name="brave_settings">BravePipe Settings</string>
    <string name="brave_settings_host_replace_key" translatable="false">brave_settings_host_replace_key</string>
    <string name="brave_settings_host_replace_dialog_title">Select the hosts you want to replace</string>
    <string name="brave_settings_host_replace_title">Replace restricted hosts</string>
    <string name="brave_settings_host_replace_summary">In some countries some hosts are restricted but can be replaced by others.</string>
    <string name="brave_settings_update_behaviour_key">brave_settings_update_behaviour_key</string>
    <string name="brave_settings_update_behaviour_description"><![CDATA[use internal downloader to fetch the newest version of BravePipe. (A dialog will popup once you click on the notification or on the check manual button in settings -> updates)]]></string>
    <string name="brave_settings_update_behaviour_title">Update Behaviour</string>
    <string name="brave_settings_internal_volume_key" translatable="false">brave_settings_internal_volume_key</string>
    <string name="brave_settings_internal_volume_description"><![CDATA[Onscreen volume slider for loudness control, independent of Android’s system media volume. Swipe along the right edge of the player to reveal a dark grey control. The main system volume slider is still usable]]></string>
    <string name="brave_settings_internal_volume_title">Internal volume control</string>
    <string name="brave_settings_hide_paid_content_key" translatable="false">brave_settings_hide_paid_content_key</string>
    <string name="brave_settings_hide_paid_content_description"><![CDATA[If enabled all Youtube/Rumble "members only/premium" videos will not be listed. Requires app restart on already loaded channels/search.]]></string>
    <string name="brave_settings_hide_paid_content_title">Hide Paid Content Videos</string>
    <string name="update">Update</string>
    <string name="update_new_version">New version %s</string>
    <string name="settings_category_comment_view_handling_title">Comment View Handling</string>
    <string translatable="false" name="brave_settings_comment_replies_same_window_key">brave_settings_comment_replies_same_window_key</string>
    <string name="brave_settings_comment_replies_same_window_title">Comment Replies same window</string>
    <string name="brave_settings_comment_replies_same_window_summary">Insert comment replies into comments page.</string>
    <string translatable="false" name="brave_settings_scroll_only_below_player_key">brave_settings_scroll_only_below_player_key</string>
    <string name="brave_settings_scroll_only_below_player_title">Scroll only below player</string>
    <string name="brave_settings_scroll_only_below_player_summary">Make video position fixed and only scroll comments/related streams/description/… in pager. (App restart required.)</string>
    <string name="brave_tip_title">Donate/Tipping</string>
    <string name="brave_tip_summary">If you want to support the project you can simply give a tip. Use one of the options listed below. Thank you very much!</string>
    <string name="brave_tip_options">Donate/Tipping Options</string>
    <string name="brave_tip_goto_website">Go To Website</string>
    <string name="brave_tip_support">Support this project.</string>
    <string name="channel_tab_podcasts">Podcasts</string>
    <string name="brave_rumble_cf_exception_info">Rumble cloudflare error. Activate this setting if not already enabled: settings → brave settings → Handle Rumble cloudflare challenge</string>
    <string name="brave_settings_handle_cf_challenge_category_title">Cloudflare challenge</string>
    <string name="brave_settings_handle_cf_challenge_description">Sometimes Rumble needs cloudflare handling via WebView. Cookies are being used.</string>
    <string name="brave_settings_handle_cf_challenge_title">Handle Rumble cloudflare challenge</string>
    <string name="brave_settings_handle_cf_challenge_interactive_description">The window will disappear once a network call was successful.</string>
    <string name="brave_settings_handle_cf_challenge_interactive_title">Show interactive WebView Floating Window.</string>
    <string name="brave_settings_category_debug_handling_title">Debug Tools</string>
    <string name="brave_settings_debug_logcat_viewer_title">Logcat Viewer</string>
    <string name="brave_settings_debug_logcat_viewer_summary">View, filter and share BravePipes logcat output.</string>
    <string name="brave_settings_debug_logcat_dumper_title">Logcat Dumper</string>
    <string name="brave_settings_debug_logcat_dumper_summary">Include logcat output in error reporting and email.</string>
    <string name="import_subscriptions_title">Import subscriptions"</string>
    <string name="export_subscriptions_title">Export subscriptions</string>
    <string name="import_subscriptions_summary">Import subscriptions from a previous .json export"</string>
    <string name="export_subscriptions_summary">Export your subscriptions to a .json file</string>
    <string name="import_from_previous_export">Import from previous export</string>
    <string name="sort_order">Sort order</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_last_used">Sort by last used</string>
    <string name="sort_by_created">Sort by created</string>
    <string name="sort_by_modified">Sort by modified</string>
    <string name="save">Save preset</string>
    <string name="save_as">Save preset as</string>
    <string name="presets">Presets</string>
    <string name="saved_presets">Saved presets</string>
    <string name="rename_preset">Rename preset</string>
    <string name="set_as_default">Set as default</string>
</resources>