<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/brave_settings">

    <ListPreference
        android:defaultValue="@string/search_filter_ui_default_key"
        android:entries="@array/search_filter_ui_description"
        android:entryValues="@array/search_filter_ui_values"
        android:key="@string/search_filter_ui_key"
        android:summary="%s"
        android:title="@string/search_filter_ui"
        app:singleLineTitle="false"
        app:iconSpaceReserved="false" />

    <MultiSelectListPreference
        app:iconSpaceReserved="false"
        android:dialogTitle="@string/brave_settings_host_replace_dialog_title"
        android:key="@string/brave_settings_host_replace_key"
        android:summary="@string/brave_settings_host_replace_summary"
        android:title="@string/brave_settings_host_replace_title"
        android:entries="@array/brave_settings_host_replace_entries"
        android:entryValues="@array/brave_settings_host_replace_values"
        android:defaultValue="@array/brave_settings_host_replace_default_values"
        />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="@string/brave_settings_update_behaviour_key"
        android:summary="@string/brave_settings_update_behaviour_description"
        android:title="@string/brave_settings_update_behaviour_title"
        app:singleLineTitle="false"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="@string/brave_settings_internal_volume_key"
        android:summary="@string/brave_settings_internal_volume_description"
        android:title="@string/brave_settings_internal_volume_title"
        app:singleLineTitle="false"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="@string/brave_settings_hide_paid_content_key"
        android:summary="@string/brave_settings_hide_paid_content_description"
        android:title="@string/brave_settings_hide_paid_content_title"
        app:singleLineTitle="false"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="@string/brave_settings_handle_cloudflare_challenge_enable_key"
        android:summary="@string/brave_settings_handle_cloudflare_challenge_description"
        android:title="@string/brave_settings_handle_cloudflare_challenge_title"
        app:singleLineTitle="false"
        app:iconSpaceReserved="false" />

    <PreferenceCategory
        android:layout="@layout/settings_category_header_layout"
        android:title="@string/settings_category_comment_view_handling_title"
        app:singleLineTitle="false"
        app:iconSpaceReserved="false">

    <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="@string/brave_settings_comment_replies_same_window_key"
            android:summary="@string/brave_settings_comment_replies_same_window_summary"
            android:title="@string/brave_settings_comment_replies_same_window_title"
            app:singleLineTitle="false"
            app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="@string/brave_settings_scroll_only_below_player_key"
            android:summary="@string/brave_settings_scroll_only_below_player_summary"
            android:title="@string/brave_settings_scroll_only_below_player_title"
            android:dependency="@string/brave_settings_comment_replies_same_window_key"
            app:singleLineTitle="false"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>
</PreferenceScreen>
